# solrust

./: README.md
.github/workflows/: rust.yml
docker/: .dockerignore  Dockerfile
engine/: Cargo.toml  clippy.toml  rustfmt.toml
engine/src/: account.rs  config.rs  data.rs  execution.rs  main.rs  signal.rs  telemetry.rs
notes/: implementation_plan.md  rust-prd.md  thesis.md
research/: .env.example  config.yaml  data_sources.py  data_storage.py  enhanced_bot.py  logging_config.py  requirements.txt  sol_volume_bot.py  test_enhanced_bot.py
research/data/: metadata.db
research/data/memecoin_volume/: memecoin_volume_20250523.parquet
